# doen

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  RESEARCH_LOG.md  agents.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: backfill_embeddings.py  config.py  database.py  deps.py  embeddings.py  exceptions.py  llm.py  main.py  mcp_server.py  migrate.py  models.py  onboarding_config.py  routes.py  schemas.py  seed.py  seed_0003.py  seed_0004.py  seed_0005.py  seed_0006.py  seed_0009.py  seed_0010.py  seed_0011.py  seed_0012.py  shaping.py  store.py
backend/migrations/: 0001_init.sql  0002_work_units.sql  0003_initiative_lifecycle.sql  0004_memory_pgvector.sql  0005_conversation.sql  0006_projects.sql  0007_project_conversation.sql  0008_project_required.sql  0009_lifecycle_state.sql  0010_sequential_ids.sql  0011_archive_initiatives.sql  0012_drop_messages.sql  0013_drop_work_units.sql  0014_project_onboarding.sql  0015_project_archive.sql  0016_project_name_unique.sql  0017_drift_reports.sql  0018_drift_reports_quality.sql  0019_initiative_type.sql  0020_heuristics.sql  0021_observations.sql  0022_observations_scoping.sql  0023_project_synthesis.sql
backend/tests/: conftest.py  test_advisor.py  test_authoring.py  test_bd13.py  test_bd14.py  test_bd15.py  test_bd17.py  test_bd20.py  test_bd22.py  test_bd24.py  test_bd25.py  test_conversation.py  test_conversation_summary.py  (+13 more)
(+198 files in other folders)
