[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doen-backend"
version = "0.1.0"
description = "Doen — the intent layer above agentic coding. FastAPI backend + stdio MCP server."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "redis>=4.2",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "mcp>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyright>=1.1.390",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
# Type-check the application source. Tests are validated by running the suite — their
# asyncio.run helpers and controlled None-access are idioms, not type bugs.
include = ["app"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
